Change standard font of land
Use of Open sans font from Google Font

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -12,7 +12,7 @@
     <!--<link rel="icon" type="image/png" href="assets/images/favicon.png" />-->
 
     <!-- Google fonts -->
-    <link href='http://fonts.googleapis.com/css?family=Lato:100,400|Roboto+Condensed:700' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300' rel='stylesheet' type='text/css'>
 
     <!-- build:css({.tmp/serve,src}) styles/vendor.css -->
     <link rel="stylesheet" href="app/vendor.css">
