--- a/landingpage/src/index.html
+++ b/landingpage/src/index.html
@@ -13,7 +13,7 @@
     <!--<link rel="icon" type="image/png" href="assets/images/favicon.png" />-->
 
     <!-- Import fonts -->
-    <link href='http://fonts.googleapis.com/css?family=Lato:400,700|Roboto+Condensed:700' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300' rel='stylesheet' type='text/css'>
 
     <!-- build:css({.tmp/serve,src}) styles/vendor.css -->
     <link rel="stylesheet" href="app/vendor.css">
@@ -34,7 +34,7 @@
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
 
-
+	
     <!-- build:js(src) scripts/vendor.js -->
     <!-- bower:js -->
     <!-- run `gulp wiredep` to automaticaly populate bower script dependencies -->
