--- a/landingpage/src/index.html
+++ b/landingpage/src/index.html
@@ -5,21 +5,23 @@
 <head>
     <meta charset="utf-8">
 
-    <title>landingpage base</title>
+    <title>Macadam</title>
 
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
 
-    <!--<link rel="icon" type="image/png" href="assets/images/favicon.png" />-->
+	<!-- Icon de tab -->
+    <link rel="icon" type="image/png" href="assets/images/logo.png" />
 
     <!-- Import fonts -->
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300' rel='stylesheet' type='text/css'>
 
+	<!-- INJECTION DU CSS -->
     <!-- build:css({.tmp/serve,src}) styles/vendor.css -->
-    <link rel="stylesheet" href="app/vendor.css">
-    <!-- bower:css -->
-    <!-- run `gulp wiredep` to automaticaly populate bower styles dependencies -->
-    <!-- endbower -->
+		<link rel="stylesheet" href="app/vendor.css">
+		<!-- bower:css -->
+			<!-- run `gulp wiredep` to automaticaly populate bower styles dependencies -->
+		<!-- endbower -->
     <!-- endbuild -->
 
     <!-- build:css({.tmp/serve,src}) styles/app.css -->
@@ -31,19 +33,196 @@
 
 <body data-spy="scroll" data-target="#navbar-list">
     <!--[if lt IE 10]>
-      <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+		<p class="browsehappy">
+			You are using an <strong>outdated</strong> browser. 
+			Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.
+		</p>
     <![endif]-->
+	
+	<!-- XCODE 
+		auto layout => Web viewpor
+		Phone gap (transition)
+	--> 
+	
+	<!-- ======== BARRE DE NAVIGATION ======== -->
+	<div class="navbar navbar-inverse navbar-fixed-top">
+		<div class="container">
 
+			<!-- Logo du site -->
+			<div class="navbar-header">
+				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+				</button>
+				<a href="#" class="navbar-brand">
+					<img src="assets/Images/logo.png" class="nav-logo" alt="Logo macadam" />
+				</a>
+				<a href="#" class="navbar-brand">&nbsp;Macadam</a>
+			</div>
+
+			<!-- Navigation du site -->
+			<div class="navbar-collapse collapse">
+				<ul class="nav navbar-nav navbar-right">
+					<li><a href="#">Acceuil</a></li>
+					<li><a href="#">Balades</a></li>
+				</ul>
+			</div>
+		</div>
+	</div>
+	
+	<!-- ============== HERO ================= -->
+	<div class="hero">
+		<div class="container">
+			<div class="row">
+				<div class="hero-title col-md-7">
+					<h1>&ldquo; Le premier réseau social pensé pour les motards ! &bdquo;</h1>
+				</div>
+
+				<div class="hero-content col-md-3">
+					<a href="#" class="btn btn-outline btn-lg btn-block">Rejoindre</a>
+				</div>
+			</div>
+		</div>
+	</div>
+		
+	<!-- ============== CONTENU ================= -->
+	<div class="container content">
+	
+		<!-- ============ FEATURES =============== -->
+		<div class="features">
+
+			<!-- Rejoindre un groupe -->
+			<div class="feature">
+				<div class="row">
+					<div class="col-md-5">
+						<img src="/Assets/images/features/groupe.jpg" class="thumbnail thumbnail-circle" />
+					</div>
+					<div class="col-md-7">
+						<div class="feature-title">
+							<span class="feature-title-icon">
+								<i class="fa fa-motorcycle"></i>
+							</span>
+							Rejoindre un groupe
+						</div>
+
+						<div class="feature-text">
+							<ul>
+								<li>Simplifier vos rencontres</li>
+								<li>Rester en contacts</li>
+								<li>S'organiser</li>
+							</ul>
+						</div>
+					</div>
+				</div>
+			</div>
+
+			<!-- Participer aux balades -->
+			<div class="feature">
+				<div class="row">
+					<div class="col-md-7">
+						<div class="feature-title">
+							<span class="feature-title-icon">
+								<i class="fa fa-road"></i>
+							</span>
+							Participer aux balades
+						</div>
+
+						<div class="feature-text">
+							<ul>
+								<li>Découvrir de nouvelles routes</li>
+								<li>Partager à plusieurs</li>
+								<li>Ne plus rater d'évênements</li>
+							</ul>
+						</div>
+					</div>
+					<div class="col-md-5">
+						<img src="/Assets/images/features/balade.jpg" class="thumbnail thumbnail-circle" />
+					</div>
+				</div>
+			</div>
+
+			<!-- Application mobile -->
+			<div class="feature">
+				<div class="row">
+					<div class="col-md-5">
+						<img src="/Assets/images/features/mobile.png" />
+					</div>
+					<div class="col-md-7">
+						<div class="feature-title">
+							<span class="feature-title-icon">
+								<i class="fa fa-mobile"></i>
+							</span> Une application mobile
+						</div>
+						<div class="feature-text">
+							<ul>
+								<li>Accéder partout à ses informations</li>
+								<li>Suivre les parcours depuis le GPS</li>
+							</ul>
+						</div>
+						<div class="feature-text">
+							<ul>
+								<li class="Os"><i class="fa fa-windows"></i>Windows Phone</li>
+								<li class="Os"><i class="fa fa-android"></i>Androïd</li>
+								<li class="Os"><i class="fa fa-apple"></i>Iphone</li>
+							</ul>
+						</div>
+					</div>
+				</div>
+			</div>
+			
+		</div>
+		
+	</div>
+	
+	<!-- ============= FOOTER ================ -->
+	<footer class="footer">
+		<div class="container">
+		
+			<div class="row">
+				<a href="#Contact"></a>
+
+				<div class="footer-col col-md-5">
+					<img src="assets/images/logo_full.png" alt="Logo" height="150" />
+				</div>
+
+				<div class="footer-col footer-col-spacing col-md-7">
+					<h2>Contact</h2>
+					<ul>
+						<li>
+							<i class="fa fa-envelope"></i>
+							<a href="#" target="_blank">Contact@macadam.com</a>
+						</li>
+						<li>
+							<i class="fa fa-map-marker"></i>
+							4 rue de la Femme, 75008 Amsterdam, Pays-Bas.
+						</li>
+						<li>
+							<i class="fa fa-phone"></i>
+							+33 1 69 69 69 69
+						</li>
+					</ul>
+				</div>
+
+			</div>
+			
+			<!-- Copyright -->
+			<div class="row">
+				<p class="footer-coypright">&copy; 2015 - Macadam Team Development</p>
+			</div>
+		</div>
+	</footer>
 	
     <!-- build:js(src) scripts/vendor.js -->
-    <!-- bower:js -->
-    <!-- run `gulp wiredep` to automaticaly populate bower script dependencies -->
-    <!-- endbower -->
+		<!-- bower:js -->
+			<!-- run `gulp wiredep` to automaticaly populate bower script dependencies -->
+		<!-- endbower -->
     <!-- endbuild -->
 
+	<!-- ===== INJECTION DES SCRIPTS JAVASCRIPT ===== -->
     <!-- build:js({.tmp/serve,.tmp/partials,src}) scripts/app.js -->
     <!-- inject:js -->
-    <!-- js files will be automaticaly insert here -->
+		<!-- js files will be automaticaly insert here -->
     <!-- endinject -->
 </body>
 
