--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -1,24 +1,27 @@
 <!doctype html>
-<html class="no-js" ng-app="myApp">
+
+<html>
 
 <head>
     <meta charset="utf-8">
 
-    <title>frontend base</title>
+    <title>Macadam</title>
 
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
 
-    <!--<link rel="icon" type="image/png" href="assets/images/favicon.png" />-->
+	<!-- Icon de tab -->
+    <link rel="icon" type="image/png" href="assets/images/logo.png" />
 
-    <!-- Google fonts -->
+    <!-- Import fonts -->
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300' rel='stylesheet' type='text/css'>
-
+	
+	<!-- INJECTION DU CSS -->
     <!-- build:css({.tmp/serve,src}) styles/vendor.css -->
-    <link rel="stylesheet" href="app/vendor.css">
-    <!-- bower:css -->
-    <!-- run `gulp wiredep` to automaticaly populate bower styles dependencies -->
-    <!-- endbower -->
+		<link rel="stylesheet" href="app/vendor.css">
+		<!-- bower:css -->
+			<!-- run `gulp wiredep` to automaticaly populate bower styles dependencies -->
+		<!-- endbower -->
     <!-- endbuild -->
 
     <!-- build:css({.tmp/serve,src}) styles/app.css -->
@@ -28,30 +31,107 @@
     <!-- endbuild -->
 </head>
 
-<body>
+<body data-spy="scroll" data-target="#navbar-list">
     <!--[if lt IE 10]>
-      <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+		<p class="browsehappy">
+			You are using an <strong>outdated</strong> browser. 
+			Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.
+		</p>
     <![endif]-->
+	
+	<!-- ======== BARRE DE NAVIGATION ======== -->
+	<div class="navbar navbar-inverse navbar-fixed-top">
+		<div class="container">
 
-    <div ui-view></div>
+			<!-- Logo du site -->
+			<div class="navbar-header">
+				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+				</button>
+				<a href="#" class="navbar-brand">
+					<img src="assets/Images/logo.png" class="nav-logo" alt="Logo macadam" />
+				</a>
+				<a href="#" class="navbar-brand">&nbsp;Macadam</a>
+			</div>
 
+			<!-- Navigation du site -->
+			<div class="navbar-collapse collapse">
+				<ul class="nav navbar-nav navbar-right">
+					<li><a href="#">Acceuil</a></li>
+					<li><a href="#">Balades</a></li>
+				</ul>
+			</div>
+		</div>
+	</div>
+	
+	<!-- ============== HERO ================= -->
+	<div class="hero">
+		<div class="container">
+			<div class="row">
+				<div class="hero-title col-md-7">
+					<h1>&ldquo; Le premier réseau social pensé pour les motards ! &bdquo;</h1>
+				</div>
+			</div>
+		</div>
+	</div>
+		
+	<!-- ============== CONTENU ================= -->
+	<div class="container content">
+	
+	</div>
+	
+	<!-- ============= FOOTER ================ -->
+	<footer class="footer">
+		<div class="container">
+		
+			<div class="row">
+				<a href="#Contact"></a>
+
+				<div class="footer-col col-md-5">
+					<img src="assets/images/logo_full.png" alt="Logo" height="150" />
+				</div>
+
+				<div class="footer-col footer-col-spacing col-md-7">
+					<h2>Contact</h2>
+					<ul>
+						<li>
+							<i class="fa fa-envelope"></i>
+							<a href="#" target="_blank">Contact@macadam.com</a>
+						</li>
+						<li>
+							<i class="fa fa-map-marker"></i>
+							4 rue de la Femme, 75008 Amsterdam, Pays-Bas.
+						</li>
+						<li>
+							<i class="fa fa-phone"></i>
+							+33 1 69 69 69 69
+						</li>
+					</ul>
+				</div>
+
+			</div>
+			
+			<!-- Copyright -->
+			<div class="row">
+				<p class="footer-coypright">&copy; 2015 - Macadam Team Development</p>
+			</div>
+		</div>
+	</footer>
+	
     <!-- build:js(src) scripts/vendor.js -->
-    <!-- bower:js -->
-    <!-- run `gulp wiredep` to automaticaly populate bower script dependencies -->
-    <!-- endbower -->
+		<!-- bower:js -->
+			<!-- run `gulp wiredep` to automaticaly populate bower script dependencies -->
+		<!-- endbower -->
     <!-- endbuild -->
 
+	<!-- ===== INJECTION DES SCRIPTS JAVASCRIPT ===== -->
     <!-- build:js({.tmp/serve,.tmp/partials,src}) scripts/app.js -->
-    <script src="index.js"></script>
     <!-- inject:js -->
-    <!-- js files will be automaticaly insert here -->
+		<!-- js files will be automaticaly insert here -->
     <!-- endinject -->
-
-    <!-- inject:partials -->
-    <!-- angular templates will be automatically converted in js and inserted here -->
-    <!-- endinject -->
-    <!-- endbuild -->
-
+	
 </body>
 
 </html>
