--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -58,8 +58,7 @@
 			<!-- Navigation du site -->
 			<div class="navbar-collapse collapse">
 				<ul class="nav navbar-nav navbar-right">
-					<li><a href="#" ui-sref="trips">Acceuil</a></li>
-					<li><a href="#" ui-sref="trips">Balades</a></li>
+					<li><a href="#" ui-sref="trips">Home</a></li>
 				</ul>
 			</div>
 		</div>
@@ -70,7 +69,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="hero-title col-md-7">
-					<h2>&ldquo; Le premier réseau social pensé pour les motards ! &bdquo;</h2>
+					<h2>&ldquo; The first social network for riders &bdquo;</h2>
 				</div>
 			</div>
 		</div>
